Fix form button posistion and horizontal align

--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -89,6 +89,8 @@
   font-weight: bold;
   font-size: 15px;
   padding: 6px 20px;
+  display: block;
+  margin: 10px auto;
   transition: 0.4s;
   &:hover {
     border-color: $darkRed;
@@ -118,6 +120,14 @@
     background-color: transparent;
     border-color: $lightRed;
     color: $lightGray;
+  }
+  &:active {
+    background-color: transparent;
+    box-shadow: none;
+  }
+  &:focus {
+    background-color: transparent;
+    box-shadow: none;
   }
 }
 
